testdata/language-features/guard/guard05.reject.out
type error: can not unify
[32m'Bool[m
with
[32m'Tuple0[m

in testdata/language-features/guard/guard05.reject.lc:1:9:
value | () = "wrong"
        ^^

------------ trace
infer:  [47m'BoolCase (\_:'Type -> _:'Type) (labelend undefined) (labelend "wrong") Tuple0[49m[K
infer:  [47m'BoolCase (\_:'Type -> _:'Type) (labelend undefined) (labelend "wrong")[49m Tuple0[K
infer:  [47m'BoolCase (\_:'Type -> _:'Type) (labelend undefined)[49m (labelend "wrong") Tuple0[K
infer:  [47m'BoolCase (\_:'Type -> _:'Type)[49m (labelend undefined) (labelend "wrong") Tuple0[K
infer:  [47m'BoolCase[49m (\_:'Type -> _:'Type) (labelend undefined) (labelend "wrong") Tuple0[K
focus:  ([47m[32m\a:Type b:Type c:Type d:Type -> 'BoolCase a b c d[39m[49m) (\_:'Type -> _:'Type) (labelend undefined) (labelend "wrong") Tuple0[K
check:  ([32m\a:Type b:Type c:Type d:Type -> 'BoolCase a b c d[39m) ([47m(\_:'Type -> _:'Type) :: [32m'Bool->Type[39m[49m) (labelend undefined) (labelend "wrong") Tuple0[K
check:  ([32m\a:Type b:Type c:Type d:Type -> 'BoolCase a b c d[39m) (\[32me[39m:[32m'Bool[39m -> [47m_:'Type :: [32mType[39m[49m) (labelend undefined) (labelend "wrong") Tuple0[K
infer:  ([32m\a:Type b:Type c:Type d:Type -> 'BoolCase a b c d[39m) (\[32me[39m:[32m'Bool[39m -> [47m_:'Type[49m : [32mType[39m) (labelend undefined) (labelend "wrong") Tuple0[K
infer:  ([32m\a:Type b:Type c:Type d:Type -> 'BoolCase a b c d[39m) (\[32me[39m:[32m'Bool[39m -> (\[34mf[39m:[47m'Type[49m -> f) : [32mType[39m) (labelend undefined) (labelend "wrong") Tuple0[K
focus:  ([32m\a:Type b:Type c:Type d:Type -> 'BoolCase a b c d[39m) (\[32me[39m:[32m'Bool[39m -> (\[34mf[39m:[47m[32mType[39m[49m -> f) : [32mType[39m) (labelend undefined) (labelend "wrong") Tuple0[K
infer:  ([32m\a:Type b:Type c:Type d:Type -> 'BoolCase a b c d[39m) (\[32me[39m:[32m'Bool[39m -> \[34mf[39m->[47mf[49m : [32mType[39m) (labelend undefined) (labelend "wrong") Tuple0[K
focus:  ([32m\a:Type b:Type c:Type d:Type -> 'BoolCase a b c d[39m) (\[32me[39m:[32m'Bool[39m -> \[34mf[39m->[47m[32mf[39m[49m : [32mType[39m) (labelend undefined) (labelend "wrong") Tuple0[K
focus:  ([32m\a:Type b:Type c:Type d:Type -> 'BoolCase a b c d[39m) (\[32me[39m:[32m'Bool[39m [34mf[39m -> [47m[32mf[39m[49m:[32mType[39m) (labelend undefined) (labelend "wrong") Tuple0[K
focus:  ([32m\a:Type b:Type c:Type d:Type -> 'BoolCase a b c d[39m) (\[32me[39m:[32m'Bool[39m [34mf[39m [34mg[39m:[32m'Unit[39m -> [47m[32mf[39m[49m) (labelend undefined) (labelend "wrong") Tuple0[K
focus:  ([32m\a:Type b:Type c:Type d:Type -> 'BoolCase a b c d[39m) (\[32me[39m:[32m'Bool[39m -> \[34mf[39m->[47m[32mf[39m[49m) (labelend undefined) (labelend "wrong") Tuple0[K
focus:  ([32m\a:Type b:Type c:Type d:Type -> 'BoolCase a b c d[39m) (\[34me[39m [32mf[39m:[32m'Bool[39m -> [47m[32me[39m[49m) (labelend undefined) (labelend "wrong") Tuple0[K
focus:  ([32m\a:Type b:Type c:Type d:Type -> 'BoolCase a b c d[39m) (\[34me[39m [47m[32mf:Type -> e[39m[49m) (labelend undefined) (labelend "wrong") Tuple0[K
focus:  (\[34ma[39m -> ([32m\b:Type c:Type d:Type e:Type -> 'BoolCase b c d e[39m) ([47m[32m\f:Type -> a[39m[49m)) (labelend undefined) (labelend "wrong") Tuple0[K
focus:  (\[34ma[39m [47m[32mb:Type c:Type d:Type -> 'BoolCase (\e:Type -> a) b c d[39m[49m) (labelend undefined) (labelend "wrong") Tuple0[K
focus:  (\[34ma[39m -> ([47m[32m\b:Type c:Type d:Type -> 'BoolCase (\e:Type -> a) b c d[39m[49m) (labelend undefined)) (labelend "wrong") Tuple0[K
check:  (\[34ma[39m -> ([32m\b:Type c:Type d:Type -> 'BoolCase (\e:Type -> a) b c d[39m) ([47mlabelend undefined :: [32ma[39m[49m)) (labelend "wrong") Tuple0[K
check:  (\[34ma[39m -> ([32m\b:Type c:Type d:Type -> 'BoolCase (\e:Type -> a) b c d[39m) (labEnd [47mundefined::[32ma[39m[49m)) (labelend "wrong") Tuple0[K
focus:  (\[34ma[39m -> ([32m\b:Type c:Type d:Type -> 'BoolCase (\e:Type -> a) b c d[39m) (labEnd ([47m[32mundefined a[39m[49m))) (labelend "wrong") Tuple0[K
focus:  (\[34ma[39m -> ([32m\b:Type c:Type d:Type -> 'BoolCase (\e:Type -> a) b c d[39m) ([47m[32mlabend (undefined a)[39m[49m)) (labelend "wrong") Tuple0[K
focus:  (\[34ma[39m [47m[32mb:Type c:Type -> 'BoolCase (\d:Type -> a) (labend (undefined a)) b c[39m[49m) (labelend "wrong") Tuple0[K
focus:  (\[34ma[39m -> ([47m[32m\b:Type c:Type -> 'BoolCase (\d:Type -> a) (labend (undefined a)) b c[39m[49m) (labelend "wrong")) Tuple0[K
check:  (\[34ma[39m -> ([32m\b:Type c:Type -> 'BoolCase (\d:Type -> a) (labend (undefined a)) b c[39m) ([47mlabelend "wrong" :: [32ma[39m[49m)) Tuple0[K
check:  (\[34ma[39m -> ([32m\b:Type c:Type -> 'BoolCase (\d:Type -> a) (labend (undefined a)) b c[39m) (labEnd [47m"wrong"::[32ma[39m[49m)) Tuple0[K
infer:  (\[34ma[39m -> ([32m\b:Type c:Type -> 'BoolCase (\d:Type -> a) (labend (undefined a)) b c[39m) (labEnd [47m"wrong"[49m:[32ma[39m)) Tuple0[K
focus:  (\[34ma[39m -> ([32m\b:Type c:Type -> 'BoolCase (\d:Type -> a) (labend (undefined a)) b c[39m) (labEnd [47m[32m"wrong"[39m[49m:[32ma[39m)) Tuple0[K
focus:  (\[34ma[39m -> ([32m\b:Type c:Type -> 'BoolCase (\d:Type -> a) (labend (undefined a)) b c[39m) (labEnd \([34me[39m : [32ma~'String[39m)->[47m[32m"wrong"[39m[49m)) Tuple0[K
focus:  (\[34ma[39m -> ([32m\b:Type c:Type -> 'BoolCase (\d:Type -> a) (labend (undefined a)) b c[39m) (labEnd (\[34ma[39m:=[32m'String[39m -> [47m[32m"wrong"[39m[49m))) Tuple0[K
focus:  (\[34ma[39m -> ([32m\b:Type c:Type -> 'BoolCase (\d:Type -> a) (labend (undefined a)) b c[39m) (\[34ma[39m:=[32m'String[39m -> labEnd [47m[32m"wrong"[39m[49m)) Tuple0[K
focus:  (\[34ma[39m -> ([32m\b:Type c:Type -> 'BoolCase (\d:Type -> a) (labend (undefined a)) b c[39m) (\[34ma[39m:=[32m'String[39m -> [47m[32mlabend "wrong"[39m[49m)) Tuple0[K
focus:  (\[34ma[39m [34ma[39m:=[32m'String[39m -> ([32m\b:Type c:Type -> 'BoolCase (\d:Type -> 'String) (labend (undefined 'String)) b c[39m) ([47m[32mlabend "wrong"[39m[49m)) Tuple0[K
focus:  (\[34ma[39m [34ma[39m:=[32m'String[39m [47m[32mb:Type -> 'BoolCase (\c:Type -> 'String) (labend (undefined 'String)) (labend "wrong") b[39m[49m) Tuple0[K
focus:  ([47m[32m\a:Type -> 'BoolCase (\b:Type -> 'String) (labend (undefined 'String)) (labend "wrong") a[39m[49m) Tuple0[K
check:  ([32m\a:Type -> 'BoolCase (\b:Type -> 'String) (labend (undefined 'String)) (labend "wrong") a[39m) [47mTuple0::[32m'Bool[39m[49m[K
infer:  ([32m\a:Type -> 'BoolCase (\b:Type -> 'String) (labend (undefined 'String)) (labend "wrong") a[39m) [47mTuple0[49m:[32m'Bool[39m[K
focus:  ([32m\a:Type -> 'BoolCase (\b:Type -> 'String) (labend (undefined 'String)) (labend "wrong") a[39m) [47m[32mTuple0[39m[49m:[32m'Bool[39m[K
focus:  ([32m\a:Type -> 'BoolCase (\b:Type -> 'String) (labend (undefined 'String)) (labend "wrong") a[39m) \([34mc[39m : [32m'Empty "can not unify\n\ESC[32m'Bool\ESC[m\nwith\n\ESC[32m'Tuple0\ESC[m\n"[39m)->[47m[32mTuple0[39m[49m[K
!type error: can not unify
[32m'Bool[m
with
[32m'Tuple0[m

in testdata/language-features/guard/guard05.reject.lc:1:9

------------ tooltips
testdata/language-features/guard/guard05.reject.lc 1:9-1:11  Tuple0
testdata/language-features/guard/guard05.reject.lc 1:14-1:21  String
